quick endif fix

--- a/_src/_includes/page.njk
+++ b/_src/_includes/page.njk
@@ -12,6 +12,7 @@
      {{ content | safe }}
      {%if title == "Contact"%}
           {%include 'form.html'%}
+     {% endif %}
      <footer>
           {% include 'header.html'%}
      </footer>
