--- a/_src/_includes/header.html
+++ b/_src/_includes/header.html
@@ -2,8 +2,8 @@
      <nav>
           <ul>
                <li><a href="/">Home</a></li>
-               <li><a href="/about">About</a></li>
-               <li><a href="/contact">Contact</a></li>
+               <li><a href="/about">About Honkai Star Rail</a></li>
+               <li><a href="/contact">download the Game!</a></li>
           </ul>
      </nav>
 </header>
