lots of changes

--- a/_src/css/style.css
+++ b/_src/css/style.css
@@ -8,8 +8,13 @@ body {
 }
 footer {
      background-color: aliceblue;
-     padding: 10vw;
+     padding: 0.7vw;
 }
 header {
      background-color: aliceblue;
+     padding: 0.7vw;
+}
+img {
+     width: 35%;
+     padding: 4vw;
 }
