lots of changes

--- a/_src/_includes/header.html
+++ b/_src/_includes/header.html
@@ -1,9 +1,9 @@
 <header>
-     <nav>
+     <body>
           <ul>
-               <li><a href="/">Home</a></li>
-               <li><a href="/about">About Honkai Star Rail</a></li>
-               <li><a href="/contact">download the Game!</a></li>
+               <ul><a href="/">Home</a></ul>
+               <ul><a href="/about">About Honkai Star Rail</a></ul>
+               <ul><a href="/contact">Download the Game!</a></ul>
           </ul>
-     </nav>
+     </body>
 </header>
